# ComfyUI-UML

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTORS.md  MANIFEST.in  README.md  SECURITY.md  __init__.py  comfy-env-root.toml  comfy-test.toml  conftest.py  index.html  install.py  kroki_client.py  llms.txt  prestartup_script.py  pyproject.toml  renovate.json  requirements.txt  uml_routes.py
.github/: SECURITY.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: act-comfy-test-linux.yml  codeql.yml  dependency-review.yml  pr-gate.yml  publish-node.yml  pytest.yml  stale.yml  workflow-tests.yml
docs/: Comparison-Workspace-vs-Portable.md  KrokiFormats.md  LLMCall.md  LLMPromptEngine.md  Publishing.md  README.md  Testing.md  UMLDiagram.md  Usage.md  WorkflowFormat.md  Workflows.md
example_workflows/: llm_kroki.json  llm_kroki_logo.json  llm_ollama.json  uml_actdiag.json  uml_all_diagrams.json  uml_blockdiag.json  uml_bpmn.json  uml_bytefield.json  uml_c4plantuml.json  uml_d2.json  uml_dbml.json  uml_ditaa.json  uml_erd.json  uml_excalidraw.json  uml_graphviz.json  uml_mermaid.json  uml_nomnoml.json  uml_nwdiag.json  uml_packetdiag.json  uml_pikchr.json  uml_plantuml.json  uml_quickstart.json  uml_rackdiag.json  uml_seqdiag.json  uml_structurizr.json  uml_svgbob.json  uml_symbolator.json  uml_tikz.json  uml_umlet.json  uml_vega.json  uml_vegalite.json  uml_wavedrom.json  uml_wireviz.json
main/: index.html
main/linux-cpu/: index.html  results.json
main/linux-cpu/logs/: uml_mermaid_resources.csv  uml_plantuml_resources.csv  uml_single_diagram_only_resources.csv  uml_single_node_resources.csv
main/linux-cpu/videos/uml_mermaid/: metadata.json
main/linux-cpu/videos/uml_plantuml/: metadata.json
main/linux-cpu/videos/uml_single_diagram_only/: metadata.json
main/linux-cpu/videos/uml_single_node/: metadata.json
main/macos-cpu/: index.html  results.json
main/macos-cpu/logs/: uml_mermaid_resources.csv  uml_plantuml_resources.csv  uml_single_diagram_only_resources.csv  uml_single_node_resources.csv
main/macos-cpu/videos/uml_mermaid/: metadata.json
main/macos-cpu/videos/uml_plantuml/: metadata.json
main/macos-cpu/videos/uml_single_diagram_only/: metadata.json
main/macos-cpu/videos/uml_single_node/: metadata.json
main/windows-cpu/: index.html  results.json
main/windows-cpu/logs/: uml_mermaid_resources.csv  uml_plantuml_resources.csv  uml_single_diagram_only_resources.csv  uml_single_node_resources.csv
main/windows-cpu/videos/uml_mermaid/: metadata.json
main/windows-cpu/videos/uml_plantuml/: metadata.json
main/windows-cpu/videos/uml_single_diagram_only/: metadata.json
main/windows-cpu/videos/uml_single_node/: metadata.json
main/windows-portable-cpu/: index.html  models.json  results.json
main/windows-portable-cpu/logs/: uml_mermaid_resources.csv  uml_plantuml_resources.csv  uml_single_diagram_only_resources.csv  uml_single_node_resources.csv
main/windows-portable-cpu/videos/uml_mermaid/: metadata.json
main/windows-portable-cpu/videos/uml_plantuml/: metadata.json
main/windows-portable-cpu/videos/uml_single_diagram_only/: metadata.json
main/windows-portable-cpu/videos/uml_single_node/: metadata.json
nodes/: __init__.py  comfy-env.toml  default_code.py  kroki_client.py  llm_call.py  prompt_engine.py  uml_diagram.py  uml_llm.py  uml_llm_call.py  uml_llm_prompt_engine.py  uml_llm_shared.py  uml_routes.py  uml_viewer_url.py
nodes/defaults/: actdiag.txt  blockdiag.txt  bpmn.txt  bytefield.txt  c4plantuml.txt  d2.txt  dbml.txt  ditaa.txt  excalidraw.txt  packetdiag.txt  pikchr.txt  structurizr.txt  svgbob.txt  tikz.txt  umlet.txt  vega.txt  vegalite.txt  wireviz.txt
prompts/: general_mermaid.txt  kroki.txt  mermaid_flowchart.txt  plantuml_sequence.txt  uml_plan_then_code.txt
scripts/: add_viewer_to_workflows.py  check_formats_sync.py  execute_kroki_plan.py  format_workflow_json.py  generate_all_diagrams_workflow.py  normalize_workflow.py  render_mermaid.mjs
tests/: conftest.py  test_kroki_options.py  test_uml_routes.py  test_use_mock_llm.py
web/: ComfyUI-UML.js  test-runner.html  viewer.html  viewerUrlUtils.mjs  viewer_shell.mjs
web/docs/: LLMCall.md  UMLDiagram.md  WorkflowFormat.md
web/js/: chromium_ai_example.mjs  dynamic_widgets.js  package-lock.json  package.json  render_mermaid.mjs
web/tests/: viewerUrlUtils.test.mjs
web/views/: base64View.mjs  iframeView.mjs  markdownView.mjs  pdfView.mjs  pngView.mjs  svgView.mjs  txtView.mjs  view_manifest.js
workflows/: llm_kroki.json  llm_ollama.json  uml_actdiag.json  uml_actdiag_cpu.json  uml_all_diagrams.json  uml_blockdiag.json  uml_blockdiag_cpu.json  uml_bpmn.json  uml_bpmn_cpu.json  uml_bytefield.json  uml_bytefield_cpu.json  uml_c4plantuml.json  uml_c4plantuml_cpu.json  uml_d2.json  uml_d2_cpu.json  uml_dbml.json  uml_dbml_cpu.json  uml_ditaa.json  uml_ditaa_cpu.json  uml_erd.json  uml_erd_cpu.json  uml_excalidraw.json  uml_excalidraw_cpu.json  uml_graphviz.json  uml_graphviz_cpu.json  uml_llm_ollama.json  uml_mermaid.json  uml_mermaid_cpu.json  uml_nomnoml.json  uml_nomnoml_cpu.json  uml_nwdiag.json  uml_nwdiag_cpu.json  uml_packetdiag.json  uml_packetdiag_cpu.json  uml_pikchr.json  uml_pikchr_cpu.json  uml_plantuml.json  uml_plantuml_cpu.json  uml_quickstart.json  uml_rackdiag.json  (+25 more)
