[project]
name = "comfyui-uml"
version = "0.1.5"
description = "Render Mermaid, PlantUML, Graphviz, D2 and 28 Kroki diagram types as PNG/SVG/PDF in ComfyUI. Uses the Kroki API (no local setup) or optional local Mermaid/Graphviz. Includes a built-in zoomable viewer (Save to ComfyUI, shareable URLs), optional cairosvg for in-node SVG/PNG preview, and LLM Prompt Engine + LLM Call nodes to generate diagram code from templates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "antoinebou12" }
]
dependencies = [
    "httpx>=0.24.0",
    "kroki>=0.1.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
svg-preview = ["cairosvg>=2.7"]
dynamic-widgets = ["comfy-dynamic-widgets>=0.1.6"]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/antoinebou12/ComfyUI-UML"
Documentation = "https://github.com/antoinebou12/ComfyUI-UML#readme"
"Bug Tracker" = "https://github.com/antoinebou12/ComfyUI-UML/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["__pycache__", ".git", ".github", "web"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.comfy]
PublisherId = "antoinebou12"
DisplayName = "ComfyUI-UML"
Icon = "https://raw.githubusercontent.com/antoinebou12/ComfyUI-UML/main/icon.png"

[tool.comfy-test]
levels = ["syntax", "install", "registration", "instantiation", "execution"]
publish = true

[tool.comfy-test.workflows]
timeout = 300
# Diagram-only workflows (no UMLViewerURL) for comfy-test CPU execution; graphToPrompt validation passes.
# Generate with: python scripts/generate_all_diagrams_workflow.py generate-cpu
cpu = [
  "uml_actdiag_cpu.json",
  "uml_blockdiag_cpu.json",
  "uml_bpmn_cpu.json",
  "uml_bytefield_cpu.json",
  "uml_c4plantuml_cpu.json",
  "uml_d2_cpu.json",
  "uml_dbml_cpu.json",
  "uml_ditaa_cpu.json",
  "uml_erd_cpu.json",
  "uml_excalidraw_cpu.json",
  "uml_graphviz_cpu.json",
  "uml_mermaid_cpu.json",
  "uml_nomnoml_cpu.json",
  "uml_nwdiag_cpu.json",
  "uml_packetdiag_cpu.json",
  "uml_pikchr_cpu.json",
  "uml_plantuml_cpu.json",
  "uml_rackdiag_cpu.json",
  "uml_seqdiag_cpu.json",
  "uml_structurizr_cpu.json",
  "uml_svgbob_cpu.json",
  "uml_symbolator_cpu.json",
  "uml_tikz_cpu.json",
  "uml_umlet_cpu.json",
  "uml_vega_cpu.json",
  "uml_vegalite_cpu.json",
  "uml_wavedrom_cpu.json",
  "uml_wireviz_cpu.json",
]

[tool.comfy-test.platforms]
linux = true
macos = true
windows = true
windows_portable = true
