[project]
name = "comfyui-uml"
version = "0.1.7"
description = "Render Mermaid, PlantUML, Graphviz, D2 and 28 Kroki diagram types as PNG/SVG/PDF in ComfyUI. Uses the Kroki API (no local setup) or optional local Mermaid/Graphviz. Includes a built-in zoomable viewer (Save to ComfyUI, shareable URLs), optional cairosvg for in-node SVG/PNG preview, and LLM Prompt Engine + LLM Call nodes to generate diagram code from templates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "antoinebou12" }
]
dependencies = [
    "httpx>=0.24.0",
    "kroki>=0.1.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
svg-preview = ["cairosvg>=2.7"]
dynamic-widgets = ["comfy-dynamic-widgets>=0.1.6"]
dev = [
    "pre-commit>=3.6.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/antoinebou12/ComfyUI-UML"
Documentation = "https://github.com/antoinebou12/ComfyUI-UML#readme"
"Bug Tracker" = "https://github.com/antoinebou12/ComfyUI-UML/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["__pycache__", ".git", ".github", "web"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.comfy]
PublisherId = "antoinebou12"
DisplayName = "ComfyUI-UML"
Icon = "https://raw.githubusercontent.com/antoinebou12/ComfyUI-UML/main/icon.png"

[tool.comfy-test]
levels = ["syntax", "install", "registration", "instantiation", "execution"]
publish = true

[tool.comfy-test.workflows]
timeout = 300
# Diagram-only workflow for comfy-test execution; avoids graphToPrompt link validation failures on some OSes.
cpu = ["uml_single_diagram_only.json"]

[tool.comfy-test.platforms]
linux = true
macos = true
windows = true
windows_portable = true
